--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@
 # Created by https://www.toptal.com/developers/gitignore/api/intellij+iml,python,r,macos
 # Edit at https://www.toptal.com/developers/gitignore?templates=intellij+iml,python,r,macos
 
+### Ignore downloads from NCBI
+
+ncbi_files/
+
 ### Intellij+iml ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio, WebStorm and Rider
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
